src/views/style/UserProfile.scss
$break-small: 500pt;

#user-profile {
  .card {
    text-align: left;
    padding: 0.5em 0;
    margin-top: 1em;
    position: relative;
    @media screen and (max-width: $break-small) {
      text-align: center;
    }
    &, &>form {
      &>.photo, &>.content {
        display: inline-block;
        vertical-align: top;
      }
    }
    .photo {
      img {
        width: 12rem;
        height: 12rem;
        max-width: 12rem;
        max-height: 12rem;
        padding: 0.3rem;
        background-color: #fff;
        border: 1px solid #999;
        border-radius: 4pt;
      }
      .dropzone {
        cursor: pointer;
        position: relative;
        font-size: 0;
        .loadingOverlay {
          position: absolute;
          font-size: 1.5rem;
          border-radius: 4pt;
          color: #fff;
          background-color: rgba(0, 0, 0, 0.2);
        }
        &.active {
          .loadingOverlay {
            background-color: rgba(0, 0, 0, 0.4);
          }
        }
        &:hover {
          .loadingOverlay {
            background-color: rgba(0, 0, 0, 0.4);
          }
        }
      }
      margin: 0;
    }
    &>.content, &>form>.content {
      padding: 0 0.5em;
      margin: 0 0.5em;
      margin-top: 0.5em;
      max-width: 18em;
      width: 100%;
      text-align: left;
      word-wrap: break-word;
      p, h1 {
        margin: 0;
        padding: 0;
      }
      input, textarea {
        padding: 0.5rem;
        margin: 0.1rem 0;
      }
      .identity, .contact {
        margin-bottom: 0.7em;
      }
      .identity {
        .realname {
          color: #333;
          font-size: 1.7em;
          margin-bottom: 0.1em;
          font-weight: bold;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        .username {
          color: #666;
          font-size: 1.1em;
        }
      }
      .contact {
        color: #333;
        line-height: 1.5em;
        font-size: 0.95em;
        .icon {
          color: #999;
          font-size: 0.8em;
          vertical-align: middle;
          margin-right: 0.6em;
        }
        a {
          color: #333;
          text-decoration: none;
          &:hover {
            text-decoration: underline;
          }
        }
      }
      .bio {
        font-size: 0.9em;
        line-height: 1.1em;
        white-space: pre-line;
        max-height: 5.5em;
        overflow-y: auto;
      }
    }
    .edit {
      position: absolute;
      right: 0.4em;
      top: 0;
      button {
        display: block;
      }
      .description {
        margin-left: 0.5em;
      }
      @media screen and (max-width: 600pt) {
        .description {
          display: none;
        }
      }
      @media screen and (max-width: $break-small) {
        position: static;
        display: block;
        margin-top: 0.4em;
        button {
          display: inline-block;
          width: auto;
          margin: 0.3em 0.4em;
          min-width: 9em;
        }
        .description {
          display: inline;
        }
      }
    }
  }
  .tabs {
    border-bottom: 1px solid #ccc;
    text-align: left;
    padding-left: 0.6em;
    .tab-entry {
      position: relative;
      top: 1px;
      display: inline-block;
      color: #333;
      text-decoration: none;
      padding: 0.6em 1.1em;
      border-top-left-radius: 0.3em;
      border-top-right-radius: 0.3em;
      margin: 0 0.2em;
      border: 1px solid transparent;
      &.selected, &.selected:hover {
        border: 1px solid #ccc;
        border-bottom: 1px solid #fff;
      }
      &:hover {
        border: 1px solid #eee;
        border-bottom: none;
      }
    }
  }
  text-align: center;
}

